--- a/isa2owl-core/pom.xml
+++ b/isa2owl-core/pom.xml
@@ -44,15 +44,15 @@
     </build>
 
     <repositories>
-      	<repository>
-			<id>oerc</id>
-			<url>http://frog.oerc.ox.ac.uk:8080/nexus-2.1.2/content/repositories/releases/</url>
-		</repository>
+        <repository>
+            <id>oerc</id>
+            <url>http://frog.oerc.ox.ac.uk:8080/nexus-2.1.2/repositories/releases/</url>
+        </repository>
 
-		<repository>
-			<id>oerc-snapshot</id>
-			<url>http://frog.oerc.ox.ac.uk:8080/nexus-2.1.2/content/repositories/snapshots/</url>
-		</repository>
+        <repository>
+            <id>oerc-snapshot</id>
+            <url>http://frog.oerc.ox.ac.uk:8080/nexus-2.1.2/repositories/snapshots/</url>
+        </repository>
 
         <repository>
             <id>on.cs.unibas.ch</id>
@@ -93,6 +93,97 @@
             <groupId>org.isatools</groupId>
             <artifactId>isa-graphparser</artifactId>
             <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.isatools</groupId>
+            <artifactId>ISAcreator</artifactId>
+            <version>1.7.2</version>
+
+            <exclusions>
+                <exclusion>
+                    <groupId>com.sun.jersey</groupId>
+                    <artifactId>jersey-bundle</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>genomespace</groupId>
+                    <artifactId>org.genomespace.jersey-apache-client</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>genomespace</groupId>
+                    <artifactId>identityServer-messages</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>com.amazonaws</groupId>
+                    <artifactId>aws-java-sdk</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>genomespace</groupId>
+                    <artifactId>cdk</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>genomespace</groupId>
+                    <artifactId>dm-messages</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.isatools</groupId>
+                    <artifactId>import_layer</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.jets3t</groupId>
+                    <artifactId>com.springsource.org.jets3t</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>com.google.zxing</groupId>
+                    <artifactId>core</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>com.google.zxing</groupId>
+                    <artifactId>javase</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>prefuse</groupId>
+                    <artifactId>prefuse</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.profusians</groupId>
+                    <artifactId>profusians</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>javax.xml.ws</groupId>
+                    <artifactId>jaxws-api</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>javax.xml</groupId>
+                    <artifactId>jaxrpc-api</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.apache.felix</groupId>
+                    <artifactId>org.apache.felix.main</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>lucene</groupId>
+                    <artifactId>lucene</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.apache.lucene</groupId>
+                    <artifactId>lucene-core</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.isatools</groupId>
+                    <artifactId>import_layer</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>uk.ac.ebi</groupId>
+                    <artifactId>ols</artifactId>
+                </exclusion>
+
+                <exclusion>
+                    <groupId>org.apache.commons</groupId>
+                    <artifactId>com.springsource.org.apache.commons.httpclient</artifactId>
+                </exclusion>
+            </exclusions>
+
         </dependency>
 
         <dependency>
@@ -169,6 +260,12 @@
             <artifactId>pellet</artifactId>
             <!-- latest version is 2.2.0, or earlier 2.1.1, ... -->
             <version>2.3.0</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.apache.lucene</groupId>
+                    <artifactId>lucene-core</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
