--- a/linkedISA-core/pom.xml
+++ b/linkedISA-core/pom.xml
@@ -57,13 +57,6 @@
             <name>Apaches's Maven repository</name>
             <url>https://repository.apache.org/content/repositories/releases/</url>
         </repository>
-
-        <repository>
-            <id>Aduna repository</id>
-            <name>Sesame's Maven repository</name>
-            <url>http://repo.aduna-software.org/maven2/releases/</url>
-        </repository>
-
     </repositories>
 
     <dependencies>
@@ -76,7 +69,7 @@
 
         <dependency>
             <groupId>org.isatools</groupId>
-            <artifactId>ISacreator</artifactId>
+            <artifactId>ISAcreator</artifactId>
             <version>1.7.7</version>
         </dependency>
 
